# Children-Media-Library

./: .gitignore  Cargo.toml  Dockerfile  README.md  cli.js  config.example.json  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  server.js  start_dev.sh
design/: Children Audio Library.fig
design/models/: RaspberryPi_Case_Touchscreen.stl  children-audio-library_raspberry-pi.blend  children-audio-library_raspberry-pi.blend1
design/models/50252_Speakers/: BLENDSWAP_LICENSE.txt  Speakers..blend  Speakers..blend1
design/models/74897_Studio_Setup_2.0_-_Cycles/: 74897 - Studio Setup 2.0 - Cycles - License.html
design/models/77443_Raspberry_Pi_B__mockup/: 77443 - Raspberry Pi B+ mockup - License.html  simple_raspberry_bplus.blend
lib/: bluetooth.js  cli.js  help.txt  isMediaFile.js  library.js  mediaExtensions.js  server.js  streamFile.js
public/: index.html
public/css/: app.css  fonts.css  variables.css
public/js/: app.js  constants.js  lazyLoad.js  store.js  utils.js  views.js
public/js/components/: Gallery.js
public/js/views/: album.js  albumCover.js  albumGallery.js  albumGroup.js  albumGroupCover.js  albumGroups.js  albumGroupsGroup.js  albums.js  albumsAlbum.js  albumsGroup.js  app.js  audio.js  controls.js  cover.js  covers.js  coversGroup.js  fullscreenAlbumCover.js  group.js  groupCover.js  header.js  headerNavItem.js  playbackControls.js  playbackControlsProgress.js  (+1 more)
raspi/: autopair.sh  build.sh  childrenAudioLibrary.service.template  scan.sh  setup.sh  shutdown.sh  start.sh  update.sh
src/: config.rs  lib.rs  library.rs  playback.rs  server.rs
