[package]
name = "children-audio-library"
version = "2.0.0"
authors = ["Ondrej Brinkel <info@anzui.de>"]

[dependencies]
hyper = "0.12.35"
futures = "0.1.29"
hyper-staticfile = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
percent-encoding = "2.1.0"
chrono = "0.4.9"
sha1 = "0.6.0"
natord = "1.0.9"
rodio = "0.9"
