[package]
name = "children-audio-library"
version = "1.0.0"
authors = ["Ondrej Brinkel <info@anzui.dev>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
hyper = "0.13.4"
futures = "0.3"
hyper-staticfile = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
percent-encoding = "1.0.1"
chrono = "0.4.2"
sha1 = "0.6.0"
natord = "1.0.9"
log = "0.4.8"
tokio = { version = "0.2", features = ["full"] }
cmd_lib = "0.7.8"
