[package]
name = "children-audio-library"
version = "1.0.0"
authors = ["Ondrej Brinkel <info@anzui.dev>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
hyper-staticfile = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
percent-encoding = "2.0.1"
chrono = "0.4.2"
sha1 = "0.6.0"
natord = "1.0.9"
log = "0.4.8"
tokio = { version = "1.15.0", features = ["full"] }
cmd_lib = "1.3.0"
faccess = "0.2.4"
image = "0.23.14"

[patch.crates-io]
faccess = { git = 'https://github.com/MightyPork/faccess.git' }

[build]

# Pi 2/3/4
[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"